# django-starter

./: .gitignore  Makefile  docker-compose.dev.yaml  pyproject.toml
config/settings/: common.py  prod.py
docker/django/: Dockerfile_dev
