[tool.poetry]
name = "django-playground"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
gunicorn = "^23.0.0"
psycopg = "^3.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
